--- a/config/database.yml
+++ b/config/database.yml
@@ -22,5 +22,4 @@ test:
 
 production:
   <<: *default
-  #database: db/production.sqlite3
-database: db/production.postgresql
+  database: db/production.sqlite3
